Bug 36667 - Calculating in Text Documents: update broken
Summary: Calculating in Text Documents: update broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 Beta3
Hardware: Other Windows (All)
: high blocker
Assignee: Cédric Bosdonnat
URL:
Whiteboard:
Keywords: regression
: 36955 37014 37036 (view as bug list)
Depends on:
Blocks: mab3.4
  Show dependency treegraph
 
Reported: 2011-04-29 04:11 UTC by luisoliveira
Modified: 2011-05-13 03:18 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test doc (9.29 KB, application/vnd.oasis.opendocument.text)
2011-05-03 02:16 UTC, vitriol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description luisoliveira 2011-04-29 04:11:10 UTC

    
Comment 1 luisoliveira 2011-04-29 04:13:19 UTC
in version 3.2 work, after the first beta release dont work anymore
Comment 2 vitriol 2011-04-29 06:28:54 UTC
Confirmed. e.g. formula result in a table is not updated, you have to save and reopen the document to see result updated.
Nasty regression...
Comment 3 vitriol 2011-05-03 02:15:34 UTC
Attached simple test document. Try to change first or/and second value into the table.
Comment 4 vitriol 2011-05-03 02:16:33 UTC
Created attachment 46280 [details]
Test doc
Comment 5 Rainer Bielefeld Retired 2011-05-03 02:45:48 UTC
[Reproducible] with "LibreOffice 3.4Beta3  – WIN7  Home Premium  (64bit) German UI [DEV300m103 (Build:3)]"
Thats serious, I even see problems inserting or modifying a formula, sometimes I get the result immediately, sometimes the cell remains empty (only tooltipp shows new formula), I have to save and reopen as reported.

@Cédric:
Can you help? Please feel free to reassign if it's not your area.
Comment 6 sasha.libreoffice 2011-05-03 04:00:41 UTC
Slightly resembles Bug 35215 - in Wirter in table formulas behaves somewhat strange
Comment 7 vitriol 2011-05-08 02:40:08 UTC
A main and largely used feature in broken. It's a blocker for me. Severity changed.
Comment 8 Hervé Renault 2011-05-08 02:48:08 UTC
*** Bug 36955 has been marked as a duplicate of this bug. ***
Comment 9 Hervé Renault 2011-05-08 02:51:23 UTC
Same problem with =<B1>+<B2>
I won't even get the result if I save/reopen the file in LO 3.4 build 4
Comment 10 vitriol 2011-05-09 07:27:19 UTC
*** Bug 37014 has been marked as a duplicate of this bug. ***
Comment 11 vitriol 2011-05-09 13:44:11 UTC
*** Bug 37036 has been marked as a duplicate of this bug. ***
Comment 12 Cédric Bosdonnat 2011-05-11 08:59:33 UTC
(In reply to comment #6)
> Slightly resembles Bug 35215 - in Wirter in table formulas behaves somewhat
> strange

Not related at all
Comment 14 Scott 2011-05-12 07:14:58 UTC
Will this fix appear in 3.4 final?
Comment 15 Petr Mladek 2011-05-12 11:24:03 UTC
(In reply to comment #14)
> Will this fix appear in 3.4 final?

Yup, the commit was in the libreoffice-3-4 branch
Comment 16 Johannes Weberhofer 2011-05-13 03:18:33 UTC
Thank you! The problem fixed in the nightly build, but not in the beta5 build.