fdo#36667: Fixed update of table formulas, missing extraction of pNewVal